# Django_School_API

./: README.md  pyproject.toml
school_server/school/: encrypt.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
school_server/school/migrations/: 0001_initial.py  0002_alter_user_school_class.py  0002_student_mark.py  0003_alter_user_mark.py  0003_student_first_name_uppercase_and_more.py  0004_alter_subject_students.py
school_server/school_server/: asgi.py  settings.py  urls.py  wsgi.py
